--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,4 @@
-h1>The Best Movies According to Adil</h1>
+<h1>The Best Movies According to Ads</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr>
 <h3>The Shawshank Redemption</h3>
